data/derived/sp14/progs/unify/prog2832.ml.out
Characters 65-66:
  | h::t -> if (n< 0) then [];;
                   ^
Error: This expression has type int but an expression was expected of type
         'a list
